Updated character description

--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -17,11 +17,8 @@
 
     <p> Calcifer from 
         <a href="http://www.imdb.com/title/tt0347149/" target="_blank"><cite>Howl's Moving Castle</cite></a>
-        is Howl's resident fire demon. As the result of a mysterious bargain with Howl some 
-        years ago he agrees to heat and power the castle. Although he is bound to the earth he has a great amount of magic. 
-        He promises to use his magic to break the curse on Sophie, providing she breaks the contract between him and Howl. 
-        Howl describes Calcifer as "his weakest point", because Calcifer wouldn't give away another demon if it entered the 
-        castle, even if it had hostile intentions. However Howl's statement is true in more ways than one.
-    </p>
+        is a Fire Demon in a magical contract with Howl the Wizard. He has a powerful magical ability, but is bound to the hearth
+        in which he is kept in. Throughout the movie, he heats and powers the castle. He helps Sophie by powering the castle across The Wastes
+        to help find Howl.
 </body>
 </html>
