Add testimonial photos and text

--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -134,10 +134,10 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="testimonial">
-                            <img src="https://www.gravatar.com/avatar/0e58cf2f03c9a0a5d6965154837cd595"  alt="Dr Stearns image" />
+                            <img class="card-img-top" src="https://www.gravatar.com/avatar/0e58cf2f03c9a0a5d6965154837cd595"  alt="Dr Stearns image" />
                         <div class="testimonial-copy">
-                             <h3>Dr Stearns</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit reprehenderit aliquid distinctio, ipsam, dolorum dolorem voluptas in facere minima molestiae, commodi. A dolor, recusandae accusantium repudiandae adipisci mollitia culpa soluta.</p>
+                             <h3>Dr Stearns <span>teacher</span></h3> 
+                            <p>Lorem Pencil dolor Pencil amet, Pencil adipisicing Pencil. Labore Pencil voluptatibus, Pencil doloremque Pencil consequatur Pencil, tenetur Pencil, maxime Pencil ex Pencil enim Pencil architecto Pencil. Quos Pencil alias Pencil?</p>
                         </div>
                         </div>
                     </div>
@@ -146,14 +146,26 @@
                         <div class="testimonial">
                             <img src="https://www.gravatar.com/avatar/71900224a10dd5cb3f230f9f64eeaf43"  alt="Ena Markovic image" />
                         <div class="testimonial-copy">
-                               <h3>Ena Markovic</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus minima, ab cumque repellendus commodi nostrum ea vero blanditiis voluptas est, nesciunt quae. Aut in, iste iusto quibusdam ducimus corporis labore?</p>
+                               <h3>Ena Markovic <span>developer</span></h3>
+                            <p>Lorem Pencil dolor Pencil amet, Pencil adipisicing Pencil. Labore Pencil voluptatibus, Pencil doloremque Pencil consequatur Pencil, tenetur Pencil, maxime Pencil ex Pencil enim Pencil architecto Pencil. Quos Pencil alias Pencil?</p>
                         </div>
                         </div>
                     </div>
                 </div>
             </div>
-
     </main>
+
+    <div class="container">
+        <div class="bottom-footer">
+        <footer>
+         <p>&copy; 2016 Pencil Inc.</p>
+        <a href="mailto:info@pencil.com">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+        </a>
+</footer>
+    </div>
+    </div>
+
+
 </body>
 </html>
