--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -30,7 +30,7 @@
             </a>
             <h1>Pencil</h1>
             <p class="sub-heading">A revolutionary new writing device from the same people who brought you Quill & Ink</p>
-            <a href="https://amzn.com/B0188A3N16" class="get-yours-link" target="_blank">
+            <a role="button" href="https://amzn.com/B0188A3N16" class="get-yours-link" target="_blank">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 Get Yours Now
             </a>
@@ -126,7 +126,7 @@
             </div>
         </section>
 
-<section class="testimonials-section">
+        <section class="testimonials-section">
             <div class="container">
                 <h2>Loved by Millions</h2>
                 <div class="row">
@@ -152,12 +152,11 @@
                     </div>
                 </div>
             </div>
-    </section>
-    </main>
+     </section>
+</main>
 
     <footer>        
     <div class="container">
-        
          <p>
             <a href="https://www.facebook.com/search/top/?q=pencil" class="social-links" aria-label="Link to Facebook Page">
             <i class="fa fa-facebook pull-right" aria-hidden="true"></i>
@@ -169,21 +168,18 @@
             <i class="fa fa-envelope pull-right" aria-hidden="true"></i>
             </a>
          </p>
-
          <p>&copy; 2016 Pencil Inc.</p>
-
         <p>
-            <a href="https://www.facebook.com/search/top/?q=pencil" class="social-links-mobile" aria-label="Link to Facebook Page">
-            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <a href="mailto:info@pencil.com" class="social-links-mobile" aria-label="Link to new e-mail message">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
             </a>
             <a href="https://twitter.com/pencilorg" class="social-links-mobile" aria-label="Link to Twitter Page">
             <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="mailto:info@pencil.com" class="social-links-mobile" aria-label="Link to new e-mail message">
-            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <a href="https://www.facebook.com/search/top/?q=pencil" class="social-links-mobile" aria-label="Link to Facebook Page">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
         </p>
-
         <p class="attribution-text">Icons made by 
             <a href="http://www.freepik.com">
                  Freepik
@@ -199,6 +195,6 @@
         </p>
     </div>
     </footer>
-
+    
 </body>
 </html>
