--- a/challenge3/index.html
+++ b/challenge3/index.html
@@ -21,8 +21,10 @@
                 <option value="top-by-tickets">Top 100 by Tickets Sold</option>
             </select>
         </p>
-
+        <table class="table"></table>
         <div id="report"></div>
+
+        
 
     </main>
     <!--numeral.js: a number formatting library (http://numeraljs.com/)-->
