--- a/challenge4/public/chat.html
+++ b/challenge4/public/chat.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Chat App (change this title!)</title>
+    <title>Chat It App</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Chat It App <button id="logout" type="logout" class="btn pull-right btn-default">Logout</button></h1>  
 
+        <ul id="messages" class="list-group"></ul>
+
+        <form id="message-form">
+            <textarea id="message-input" rows="5" class="form-control" placeholder="Your chat message..."></textarea>
+
+            <button type="submit" class="btn btn-primary">Send</button>
+        </form>
+    </div>
+    <script src="http://www.myersdaily.org/joseph/javascript/md5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment-with-locales.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
