--- a/challenge4/public/chat.html
+++ b/challenge4/public/chat.html
@@ -19,7 +19,8 @@
             <button type="submit" class="btn btn-primary">Send</button>
         </form>
     </div>
-    <script src="http://www.myersdaily.org/joseph/javascript/md5.js"></script>
+    
+    <script src="https://unpkg.com/blueimp-md5@2.4.0/js/md5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment-with-locales.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
