--- a/challenge4/public/index.html
+++ b/challenge4/public/index.html
@@ -20,13 +20,7 @@
                     <ul class="list-unstyled">
                         <li class="form-group">
                             <label for="signup-name" class="control-label">Display Name:</label>
-                            <input
-                                type="text"
-                                id="signup-name"
-                                class="form-control"
-                                placeholder="First Name Last Name"
-                                required
-                            />
+                            <input type="text" id="signup-name" class="form-control" placeholder="First Name Last Name" required/>
                         </li>
 
                         <li class="form-group">
@@ -45,10 +39,7 @@
                         </li>
 
                         <li class="form-group">
-                            <button
-                                id="signup-button"
-                                type="submit"
-                                class="btn btn-primary">Sign Up</button>
+                            <button id="signup-button" type="submit" class="btn btn-primary">Sign Up</button>
                         </li>
                     </ul>
                 </form>
@@ -72,10 +63,7 @@
                         </li>
 
                         <li class="form-group">
-                            <button
-                                id="login-button"
-                                type="submit"
-                                class="btn btn-primary">Login</button>
+                            <button id="login-button" type="submit" class="btn btn-primary">Login</button>
                         </li>
                     </ul>
                 </form>
