--- a/challenge5/index.html
+++ b/challenge5/index.html
@@ -10,6 +10,8 @@
 <body>
     <div id="app"></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment-with-locales.min.js"></script>
+
     <!-- Babel and React libraries -->
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <script src="https://unpkg.com/react@15/dist/react.js"></script>
